# datagen

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: errors.rs  fakegen.rs  lib.rs  main.rs  options.rs  schema.rs
src/sinks/: avro.rs  avro_schema_utils.rs  avro_sink.rs  csv.rs  csv_sink.rs  json_sink.rs  mod.rs
test_data/: all_examples.yaml  schema_options.yaml  schema_simple.yaml
